syntax = "proto3";

option csharp_namespace = "GrpcService";

package ExampleService;

// The service definition.
service ExampleService {
  // Unary
  rpc UnaryCall (ExampleRequest) returns (ExampleResponse);

  // Server streaming
  rpc StreamingFromServer (ExampleRequest) returns (stream ExampleResponse);

  // Client streaming
  rpc StreamingFromClient (stream ExampleRequest) returns (ExampleResponse);

  // Bi-directional streaming
  rpc StreamingBothWays (stream ExampleRequest) returns (stream ExampleResponse);
}

// simple request/response
message ExampleRequest {
  int32 pageIndex = 1;
  int32 pageSize = 2;
}
message ExampleResponse {
  string message = 1;
}
